Changed background and coloring

--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Me</title>
+    <link rel="stylesheet" href="styles/styles.css"/>
 </head>
 <body>
     <h1>About Me</h1>
@@ -26,4 +27,4 @@
         really spoke to me. I have had more experiences in the scriptures since then. I am looking forward to learning as much as I can.</p>
     <p>This picture was taken at Disneyland earlier this year.  My husband and I with our younger three children (I'm on the far right in the blue sweatshirt.).  Our oldest had already moved out by then.</p>
 </body>
-</html>Z
+</html>
