--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,7 +20,7 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     
-    </header>
+        </header>
     <div id="hero">
         <div id="hero-box">
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
@@ -47,7 +47,7 @@
         <section class="rapids-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rivers</h2>
+            <h2>Rapids</h2>
         </section>
         <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
