made changes to site plan for karabearart

--- a/karabearart/site-plan.html
+++ b/karabearart/site-plan.html
@@ -88,8 +88,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">About Me</a>
+        <a href="#">My Craft</a>
       </nav>
       <hr>
       <h2>
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          About Me <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          My Craft  <!-- change this -->
         </div>
 
         <div class="top">
@@ -125,29 +125,46 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to KaraBearArt.   Here you will find all of my artwork-digital and traditional, many of my 3D computer-rendered models and some of my latest animations.  Not only will you be able to see all of my content here, you will be able to see the latest without the frustrating algorithms associated with social media.  I do still post on Instagram and post videos on YouTube, but all of that content is available here as well.  Feel free to look around.  In the “About Me” tab you will learn a little more about me, as well as see where I started.  In the “My Craft” tab you will see my creations (both original art and homework art) and get a feel for the tools I prefer to use.  Please respect my craft and do not steal or copy my images.  All images are property of and copyrighted by KaraBearArt.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/karabear_banner.png" alt="karabear banner art">
+        <img src="images/kara_profile.JPG" alt="kara profile picture">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>About Me</h3>
       <p>
-        [Written copy for the Page 2 here]
+	      Hi!  My name is Kara and I am 17-year-old self-taught artist.  I call California my home, but will soon be branching out when I go off to college next Fall.  I graduated this past May (a year early) and I am currently enrolled in two colleges.  From one college, I am finishing my 3D Modeling and Animation Certificate.  The other college I am just starting on my path.  I anticipate graduating with a Bachelor of Arts in Illustration with an emphasis in Graphic Arts/Animation.  When I am not drawing, I am an avid reader and an amateur writer (I have completed my first manuscript!).  I also enjoy many genres of music-both to listen to and to play.  I played saxophone in elementary and middle school.  From there I taught myself ukulele and guitar.  I love obscure instruments and learned to play the ocarina and kalimba.  At the ripe young age of 11, I got my Jr. Black Belt in karate and I continue to be active in various ways.  My grandmother taught me to crochet a few years back and when I have the spare time, I like to bury myself in a pile of yarn.  I also dabble in video production, character acting and face painting.
+      </p>
+
+      <h3>Where It All Began…</h3>
+      <p>
+	      From the earliest days I always had some sort of writing or drawing implement in my hands and was constantly doodling or coloring.  I loved all of the drawing I did in kindergarten and soaked up all the hands-on projects.  When first grade came around, I was a little disappointed in the amount of work I had to do instead of coloring.  My teacher was very inspirational and nice.  When I had free-time, she would allow me to draw.  One day I brought home this beautiful picture of a horse complete with grass, an apple tree, sun, clouds, flowers and flies.  You see, I am an observant person.  Where there are horses, there are flies, and where there are horses and flies, there is poop.  This picture was dubbed “The Pooping Horse” picture and that was the beginning of my passion.  I have consistently drawn pictures to brighten my family home, made cards with sarcastic content, and just evolved in my style.  I enjoy being creative, yet real at the same time.
+	      
+        When I was 12, I was gifted a beginner Claymation kit.  My imagination started to soar as I created characters, started learning videography and fell in love with the ability to create videos.  Falling in love with animation set me on a path that I will always be grateful I took.  I started taking classes from Chad Stewart, a former Disney animator, through his program called “The Animation Course”.  It was in this course that I started learning Maya 2019 and Davinci Resolve to create those videos.  I have since moved onto Blender where I have continued with animation and have recently started learning 3D modeling.  With my passion for learning, I have continued to understand every aspect of animation from story content creation to storyboarding, audio and various principles for animation.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/sally_sketch.jpg" alt="sally sketch picture">
+        <img src="images/poopinghorse.jpg" alt="pooping horse picture">
 
       </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
+      <h3>My Craft</h3>
+      <p>Digital Artwork:
+        I have my own style that I am continuing to develop.  I enjoy creating my own characters and doing fan art for my favorite book series and cartoons.  These are created using Autodesk Sketchbook.
+        </p>
+      <p>Traditional Artwork:
+        Sometimes I will dabble with traditional paper and pencil as well.  The majority of drawings here are for my Drawing 1 class where I am learning the principles of drawing.  
+        </p>
+      <p>3D Modeling:
+        I have started learning how to create 3D models with Blender.  I am currently enrolled in a 3D Modeling 1 class where I have created the majority of these.
+        </p>
+      <p>Animation:
+        In addition to the Claymation kit where it all began, I have moved into Maya 2019, Blender, DigiCel FlipBook, and FlipaClip.
+        </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/horse_sketch.jpg" alt="horse sketch">
+        <img src="images/3d_telescope.jpg" alt="3d telescope modeling picture">
 
       </ul>
       <hr>
