updated code for profile pic

--- a/karabearart/site-plan.html
+++ b/karabearart/site-plan.html
@@ -129,7 +129,7 @@
       </p>
       <p>Images for the Home page</p>
         <img src="images/karabear_banner.png" alt="karabear banner art">
-        <img src="images/kara_profile.JPG" alt="kara profile picture">
+        <img src="images/kara_profile.jpg" alt="kara profile picture">
 
       </ul>
       <h3>About Me</h3>
