--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,7 +17,7 @@
                 <a href="index.html">Home</a>
                 <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
-                <a href="contactus.html">Contact Us</a>
+                <a href=#>Contact Us</a>
             </nav>
     
         </header>
@@ -29,7 +29,7 @@
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Raft it Up!</h4>
             <div class="button-box">
-                <a class="book" href="rates.html">Book Now</a>
+                <a class="book" href=#>Book Now</a>
             </div>
         </section>
     </div>
@@ -55,14 +55,14 @@
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-            <a class="join" href="book.html">Join Us</a>
+            <a class="join" href=#>Join Us</a>
         </section>
     </main>
     
     <footer>
         <p>Raft It Up! &copy; 2022 - Geri Rusk</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href=#>Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
