updated footer data for KaraBearArt

--- a/karabearart/aboutme.html
+++ b/karabearart/aboutme.html
@@ -24,7 +24,7 @@
         <h1 class="aboutme-title">About Me</h1>
         <section class="bio">
             <h3>Bio:</h3>
-            <p class="aboutme_bio">Hi! My name is Kara and I am 17-year-old self-taught artist. I call California my home, but will soon be branching out when I go off to college next Fall. I graduated this past May (a year early) and I am currently enrolled in two colleges. From one college, I am finishing my 3D Modeling and Animation Certificate. The other college I am just starting on my path. I anticipate graduating with a Bachelor of Arts in Illustration with an emphasis in Graphic Arts/Animation. When I am not drawing, I am an avid reader and an amateur writer (I have completed my first manuscript!). I also enjoy many genres of music-both to listen to and to play. I played saxophone in elementary and middle school. From there I taught myself ukulele and guitar. I love obscure instruments and learned to play the ocarina and kalimba. At the ripe young age of 11, I got my Jr. Black Belt in karate and I continue to be active in various ways. My grandmother taught me to crochet a few years back and when I have the spare time, I like to bury myself in a pile of yarn. I also dabble in video production, character acting and face painting.</p>
+            <p class="aboutme_bio">Hi! My name is Kara and I am 17-year-old self-taught artist. I call California my home, but will soon be branching out when I go off to college next Spring. I graduated this past May (a year early) and I am currently enrolled in two colleges. From one college, I am finishing my 3D Modeling and Animation Certificate. The other college I am just starting on my path. I anticipate graduating with a Bachelor of Arts in Illustration with an emphasis in Graphic Arts/Animation. When I am not drawing, I am an avid reader and an amateur writer (I have completed my first manuscript!). I also enjoy many genres of music-both to listen to and to play. I played saxophone in elementary and middle school. From there I taught myself ukulele and guitar. I love obscure instruments and learned to play the ocarina and kalimba. At the ripe young age of 11, I got my Jr. Black Belt in karate and I continue to be active in various ways. My grandmother taught me to crochet a few years back and when I have the spare time, I like to bury myself in a pile of yarn. I also dabble in video production, character acting and face painting.</p>
             <img class="profile_pic" src="images/kara_profile.jpg" alt="Kara R. profile picture">
         </section>
         <section class="beginning">
@@ -41,7 +41,7 @@
     </main>
 
     <footer>
-        <p>KaraBearArt &copy; 2002 - Geri Rusk</p>
+        <p>KaraBearArt &copy; 2022 - Geri Rusk</p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
             <a href="mailto:karaashlynr@yahoo.com">
