updated work on KaraBearArt site

--- a/karabearart/aboutme.html
+++ b/karabearart/aboutme.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div id="content">
+        <div id="gradientbar">
         <header>
             <a id="logo_link" href="index.html">
-                <img class = "logo" src="images/karabear_logo.jpg" alt="KaraBearArt logo">
+                <img class = "logo" src="images/karabear_logo.png" alt="KaraBearArt logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -19,7 +20,8 @@
                 <a href="mycraft.html">My Craft</a>
             </nav>
         </header>
-    
+        </div>
+
     <main class="aboutme-grid">
         <h1 class="aboutme-title">About Me</h1>
         <section class="bio">
