--- a/karabearart/index.html
+++ b/karabearart/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div id="content">
+        <div id="gradientbar">
         <header>
             <a id="logo_link" href="index.html">
-                <img class = "logo" src="images/karabear_logo.jpg" alt="KaraBearArt logo">
+                <img class = "logo" src="images/karabear_logo.png" alt="KaraBearArt logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -19,42 +20,43 @@
                 <a href="mycraft.html">My Craft</a>
             </nav>
         </header>
-    
+        </div>
     <div id="hero">
         <div id="hero-box">
+            <section id="hero-msg">
+                <h1 class="home-title">KaraBearArt</h1>
+                <h4 class="home-title"> By: Kara R.</h4>
+            </section>
             <img id="hero-img" src="images/karabear_banner.png" alt="Larger version of KaraBearArt logo">
         </div>
-        <section id="hero-msg">
-            <h1 class="home-title">KaraBearArt</h1>
-            <h4> By: Kara R.</h4>
-        </section>
+        
     </div>
 
     <main class="home-grid">
-        <section class="msg">
+        <div class="msg">
             <p class="welcome">Welcome to KaraBearArt. Here you will find all of my artwork-digital and traditional, many of my 3D computer-rendered models and some of my latest animations. Not only will you be able to see all of my content here, you will be able to see the latest without the frustrating algorithms associated with social media. I do still post on Instagram and post videos on YouTube, but all of that content is available here as well. Feel free to look around. In the “About Me” tab you will learn a little more about me, as well as see where I started. In the “My Craft” tab you will see my creations (both original art and homework art) and get a feel for the tools I prefer to use. Please respect my craft and do not steal or copy my images. All images are property of and copyrighted by KaraBearArt.</p>
-        </section>
-        <section class="aboutme-card">
+        </div>
+        <div class="aboutme-card">
             <a href="aboutme.html">
             <img class="card-img" src="images/kara_profile.jpg" alt="Kara R. profile picture">
             </a>
-        </section>
-        <section class="mycraft-card">
+        </div>
+        <div class="mycraft-card">
             <a href="mycraft.html">
             <img class="card-img" src="images/sally_sketch.jpg" alt="Sally from Nightmare Before Christmas digital art creation">
             </a>
-        </section>
+        </div>
         <div id="feedback"></div>
         <form action="/my-handling-form-page" method="post">
-            <ul>
-                <h2>Join my Newsletter!</h2>
+            <h2>Join my Newsletter!</h2>
+            <ul> 
                 <li>
                   <label for="name">Name:</label>
-                  <input type="text" id="name" name="user_name" />
+                  <input type="text" id="name" name="user_name">
                 </li>
                 <li>
                   <label for="mail">E-mail:</label>
-                  <input type="email" id="mail" name="user_email" />
+                  <input type="email" id="mail" name="user_email">
                 </li>
                 <li class="button">
                     <button type="submit">Submit</button>
