--- a/karabearart/mycraft.html
+++ b/karabearart/mycraft.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div id="content">
+        <div id="gradientbar">
         <header>
             <a id="logo_link" href="index.html">
-                <img class = "logo" src="images/karabear_logo.jpg" alt="KaraBearArt logo">
+                <img class = "logo" src="images/karabear_logo.png" alt="KaraBearArt logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -19,6 +20,7 @@
                 <a href="mycraft.html">My Craft</a>
             </nav>
         </header>
+        </div>
     
     <main class="mycraft-grid">
         <h1 class="mycraft-title">My Craft</h1>
