Updated html and css for KaraBearArt site

--- a/karabearart/index.html
+++ b/karabearart/index.html
@@ -14,36 +14,32 @@
             <a id="logo_link" href="index.html">
                 <img class = "logo" src="images/karabear_logo.png" alt="KaraBearArt logo">
             </a>
+            <p class="brand_name">KaraBearArt</p>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="aboutme.html">About Me</a>
                 <a href="mycraft.html">My Craft</a>
             </nav>
         </header>
-        </div>
-    <div id="hero">
-        <div id="hero-box">
-            <section id="hero-msg">
-                <h1 class="home-title">KaraBearArt</h1>
-                <h4 class="home-title"> By: Kara R.</h4>
-            </section>
-            <img id="hero-img" src="images/karabear_banner.png" alt="Larger version of KaraBearArt logo">
-        </div>
-        
+        </div>       
     </div>
 
     <main class="home-grid">
         <div class="msg">
-            <p class="welcome">Welcome to KaraBearArt. Here you will find all of my artwork-digital and traditional, many of my 3D computer-rendered models and some of my latest animations. Not only will you be able to see all of my content here, you will be able to see the latest without the frustrating algorithms associated with social media. I do still post on Instagram and post videos on YouTube, but all of that content is available here as well. Feel free to look around. In the “About Me” tab you will learn a little more about me, as well as see where I started. In the “My Craft” tab you will see my creations (both original art and homework art) and get a feel for the tools I prefer to use. Please respect my craft and do not steal or copy my images. All images are property of and copyrighted by KaraBearArt.</p>
+            <p class="welcome">Welcome to KaraBearArt. Here you will find all of my artwork-digital and traditional, many of my 3D computer-rendered models and some of my latest animations. Not only will you be able to see all of my content here, you will be able to see the latest without the frustrating algorithms associated with social media. I do still post on Instagram and post videos on YouTube, but all of that content is available here as well. Feel free to look around. <br> In the “About Me” tab you will learn a little more about me, as well as see where I started. In the “My Craft” tab you will see my creations (both original art and homework art) and get a feel for the tools I prefer to use. <br><strong>Please respect my craft and do not steal or copy my images. All images are property of and copyrighted by KaraBearArt.</strong></p>
         </div>
+            <img class="profile_logo" src="images/karabear_banner.png" alt="Larger version of KaraBearArt logo">
         <div class="aboutme-card">
             <a href="aboutme.html">
             <img class="card-img" src="images/kara_profile.jpg" alt="Kara R. profile picture">
+            <div class="top-left">About Me</div>
             </a>
         </div>
+        
         <div class="mycraft-card">
             <a href="mycraft.html">
             <img class="card-img" src="images/sally_sketch.jpg" alt="Sally from Nightmare Before Christmas digital art creation">
+            <div class="bottom-right">My Craft</div>
             </a>
         </div>
         <div id="feedback"></div>
