--- a/karabearart/site-plan.html
+++ b/karabearart/site-plan.html
@@ -176,19 +176,19 @@
 
       <h3>Home</h3>
       <p>         
-        Header and Footer menus are fixed.  Social Media icons are for email, Instagram and YouTube. Large image is drawn image used in logo.  About me image is profile picture with embedded link.  My Crafts image will be one of the many images from My Craft page (still to be decided).
+        Header menu is fixed.  Social Media icons are for email, Instagram and YouTube. Large image is drawn image used in logo.  About me image is profile picture with embedded link.  My Crafts image will be one of the many images from My Craft page (still to be decided).
       </p>
       <img src="images/karabear_home_wireframe1.png" alt="home page wireframe">
 
       <h3>About Me</h3>
       <p>         
-        Header and Footer menus are fixed. Social Media icons are for email, Instagram and YouTube. Animation exmaple video will link to YouTube, but will have a thumbnail picture for it.
+        Header menu is fixed. Social Media icons are for email, Instagram and YouTube. Animation exmaple embedded on site.
       </p>
       <img src="images/karabear_aboutme_wireframe2.png" alt="page 2 wireframe">
 
       <h3>My Craft</h3>
       <p>         
-        Header and Footer menus are fixed. Social Media icons are for email, Instagram and YouTube.  All animation videos will link to YouTube.
+        Header menu is fixed. Social Media icons are for email, Instagram and YouTube.  All animation videos embedded on site.
       </p>
       <img src="images/karabear_mycraft_wireframe3.png" alt="page 3 wireframe">
     </main>
