updated valid html

--- a/karabearart/index.html
+++ b/karabearart/index.html
@@ -73,10 +73,10 @@
             </a>
             <a href="https://www.youtube.com/channel/UCVJz7zuhHaQO8dMg21eP0kw">
                 <img src="images/yt_logo_rgb_light.png" alt="YouTube channel link">
-            </a>
-        </div>
+            </a></div>
+
     </footer>
-    </div>
+    
     
 </body>
 </html>
