--- a/karabearart/mycraft.html
+++ b/karabearart/mycraft.html
@@ -14,6 +14,7 @@
             <a id="logo_link" href="index.html">
                 <img class = "logo" src="images/karabear_logo.png" alt="KaraBearArt logo">
             </a>
+            <p class="brand_name">KaraBearArt</p>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="aboutme.html">About Me</a>
